fix margin issues on mobile

--- a/css/stylesheets.css
+++ b/css/stylesheets.css
@@ -237,7 +237,7 @@ footer a:visited{
 	vertical-align: top;
 	text-align: justify-all;
 	width: 300px;
-	margin-left: 40px;
+	margin: 0px 20px 0px 20px;
 }
 
 #container2{ 
